--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Mac
+.DS_Store
+
+# react native
+node_modules
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
