--- a/news/package.json
+++ b/news/package.json
@@ -10,6 +10,9 @@
     "react-native-router-flux": "^2.3.8",
     "react-native-timer-mixin": "^0.11.0",
     "react-native-quiltview": "^0.1.9",
-    "apphub": "^0.5.0"
+    "apphub": "^0.5.0",
+    "react-swipeable-views": "^0.4.7",
+    "react-dom": "^0.14.0",
+    "react-motion": "^0.4.0"
   }
 }
