--- a/news/package.json
+++ b/news/package.json
@@ -13,6 +13,7 @@
     "apphub": "^0.5.0",
     "react-swipeable-views": "^0.4.7",
     "react-dom": "^0.14.0",
-    "react-motion": "^0.4.0"
+    "react-motion": "^0.4.0",
+    "react-native-button": "^1.4.2"
   }
 }
