--- a/news/package.json
+++ b/news/package.json
@@ -6,14 +6,15 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "^0.21.0",
+    "react-native": "^0.22.0",
     "react-native-router-flux": "^2.3.8",
     "react-native-timer-mixin": "^0.11.0",
     "react-native-quiltview": "^0.1.9",
-    "apphub": "^0.5.0",
+    "react": "^0.14.7",
     "react-swipeable-views": "^0.4.7",
-    "react-dom": "^0.14.0",
-    "react-motion": "^0.4.0",
-    "react-native-button": "^1.4.2"
+    "react-dom": "^0.14.7",
+    "react-motion": "^0.4.2",
+    "react-native-button": "^1.4.2",
+    "apphub": "^0.5.1"
   }
 }
